--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "7.*",
+        "php": "7.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6.1"
