--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6.1"
+        "phpunit/phpunit": "^5.6.1",
+        "humbug/humbug":   "dev-master"
     },
     "autoload": {
         "psr-4": {
