--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6.1",
-        "humbug/humbug":   "dev-master"
+        "phpunit/phpunit": "^5.6.1"
     },
     "autoload": {
         "psr-4": {
