Added infection/infection to mutation test

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
 
 script:
   - ./vendor/bin/phpunit --disallow-test-output --report-useless-tests --coverage-clover ./clover.xml
+  - if php -i |grep -qE xdebug; then ./vendor/bin/infection; fi
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
