--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6.1",
-        "infection/infection": "^0.10.5"
+        "phpunit/phpunit": "^7.5 || ^8.0",
+        "infection/infection": "^0.12.0"
     },
     "autoload": {
         "psr-4": {
