--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5 || ^8.0",
-        "infection/infection": "^0.12.0"
+        "phpunit/phpunit": "^8.5.13",
+        "infection/infection": "^0.20.0"
     },
     "autoload": {
         "psr-4": {
