--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
 
 script:
   - ./vendor/bin/phpunit --disallow-test-output --coverage-clover ./clover.xml
-  - if php -i |grep -qE xdebug; then -d xdebug.mode=coverage ./vendor/bin/infection --min-msi=100 --min-covered-msi=100 --threads=4; fi
+  - if php -i |grep -qE xdebug; then php -d xdebug.mode=coverage ./vendor/bin/infection --min-msi=100 --min-covered-msi=100 --threads=4; fi
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
