--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - composer update
 
 script:
-  - ./vendor/bin/phpunit --disallow-test-output --coverage-clover ./clover.xml
+  - XDEBUG_MODE=coverage ./vendor/bin/phpunit --disallow-test-output --coverage-clover ./clover.xml
   - if php -i |grep -qE xdebug; then php -d xdebug.mode=coverage ./vendor/bin/infection --min-msi=100 --min-covered-msi=100 --threads=4; fi
 
 after_script:
